# pystock

./: Makefile  pyproject.toml
src/pystock/: pystock.py
tests/: test_pystock.py
